gcc/testsuite/rust/rustc/ui/error-codes/E0405.rs
struct Foo;

impl SomeTrait for Foo {} // { dg-error ".E0405." "" { target *-*-* } }

fn main() {
}

